<resources>
    <string name="app_name">Mail2</string>
    <string name="main_title">xxx邮箱</string>

    <!--启动页-->
    <string name="splash_version">版本号：%s</string>
    <string name="splash_request_permission">正在获取用户权限</string>
    <string name="splash_check_permission_tips">请在权限页面打开应用所有权限</string>
    <string name="splash_check_permission_title">请确认已打开该应用使用的所有权限</string>
    <string name="splash_confirm">已确认</string>
    <string name="splash_unconfirmed">再次确认</string>
    <string name="splash_check_permission_cancel">请在设置中打开权限后重启应用</string>
    <string name="splash_init_data">正在初始化数据</string>

    <!--弹框-->
    <string name="dialog_title_tips">提示</string>
    <string name="dialog_title_update">升级更新</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_exit">退出</string>
    <string name="dialog_update">更新</string>
    <string name="dialog_install">安装</string>

    <!--登录页-->
    <string name="account_cant_empty">邮箱不能为空</string>
    <string name="password_cant_empty">密码不能为空</string>
    <string name="email_format_error">邮箱格式不正确</string>
    <string name="email_login_is_loading">正在登录中...</string>
    <string name="email_login_error">账号或密码不正确</string>


    <!--侧边栏-->
    <string name="drawer_user_name">测试</string>
    <string name="user_img_name">用户头像</string>
    <string name="drawer_address">xxxx@qq.com</string>
    <string name="drawer_inbox">收件箱</string>
    <string name="drawer_reaFlag">红旗邮件</string>
    <string name="drawer_sent">已发送</string>
    <string name="drawer_drafts">草稿箱</string>
    <string name="drawer_rubbish">垃圾邮件</string>
    <string name="drawer_delete">已删除</string>
    <string name="drawer_subscribe">订阅邮件</string>
    <string name="drawer_contacts">通讯录</string>
    <string name="drawer_scan">扫一扫</string>
    <string name="drawer_help">帮助与反馈</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>


    <!--邮件-->
    <string name="get_message_error">获取收件箱邮件失败</string>
    <string name="getting_message_catalog">正在获取邮箱目录</string>
    <string name="get_message_catalog_error">正在获取邮箱目录</string>
    <string name="get_message_catalog_null">获取邮箱列表为空</string>
    <string name="getting_messages">正在获取邮件</string>
    <string name="getting_messages_error">获取邮件出错</string>
    <string name="download_attachment_start">开始下载附件</string>
    <string name="download_attachment_error">下载附件出错</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="please_input_account">请输入账号</string>
    <string name="please_input_password">请输入密码</string>


    <!--邮件工具相关-->
    <string name="get_sent_time_error">未知</string>


    <!--数据库相关-->
    <string name="saving_message">正在保存邮件..</string>
    <string name="saving_message_error">保存邮件出错</string>

</resources>